# GodBot

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  log.txt
cfg/: binance_api.json  config.json
hpp/: GB_LogData.hpp  GB_Logger.hpp  GB_RSIStrategy.h  GB_SimpleStrategy.hpp  GodBot.hpp  Kline.hpp  LogData.hpp  base_api.hpp  base_bot.hpp  base_data.hpp  base_logger.hpp  base_strategy.hpp  binance_api.hpp  connection.hpp  curl_object.hpp  exmo_api.hpp  hmac_sha256.hpp  hmac_sha512.hpp  ta.hpp  utils.hpp
lib/exmo-api-lib/: hmac_sha512.hpp
src/: GB_LogData.cpp  GB_Logger.cpp  GB_RSIStrategy.cpp  GB_SimpleStrategy.cpp  GodBot.cpp  Kline.cpp  LogData.cpp  base_api.cpp  binance_api.cpp  curl_object.cpp  exmo.cpp  main.cpp
tests/: general_tests.cpp  ta_tests.cpp
